fix for footer menu spacing

--- a/src/scss/frontend/footer/_.scss
+++ b/src/scss/frontend/footer/_.scss
@@ -79,6 +79,7 @@ body > footer {
 		grid-area: foot_nav;
 
 		& > ul {
+			display: flex;
 			column-count: 4;
 			column-gap: .25em;
 			height: 100%;
